--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.3.0",
+    "moment": "^2.29.4",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
