--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.2",
+    "@fontsource-variable/onest": "^5.0.2",
     "astro": "^3.3.0",
     "moment": "^2.29.4",
     "tailwindcss": "^3.3.3"
