--- a/.eslintrc
+++ b/.eslintrc
@@ -33,7 +33,8 @@
     "quotes": ["warn", "single"],
     "jsx-quotes": ["warn", "prefer-single"],
     "eol-last": "off",
-    "space-before-function-paren": ["warn", "always"]
+    "space-before-function-paren": ["warn", "always"],
+    "@typescript-eslint/triple-slash-reference": "off"
   },
   "overrides": [
     {
