--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.1",
     "@fontsource-variable/onest": "^5.0.2",
     "astro": "^4.15.6",
     "moment": "^2.29.4",
